--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,6 @@
-# Built things
-_Debug/
-Compiled/
+.DS_Store
+node_modules/
 
-# AudioCache can be rebuilt from sources
-AudioCache/
+*.sublime-workspace
 
-# Lockfile
-_OpenInEditor.lock
-
-# User settings
-Game.agf.user
-*.crm.user
-
-# Backups
-Game.agf.bak
-backup_acsprset.spr
-
-# Memory dumps
-*.dmp
-
-# Temporary files
-# temporarily created during sprite or room background compression
-~aclzw.tmp
-# temporary, main game data, before getting packed into exe
-game28.dta
-# temporary build of the game before being moved to Compiled/ folder
-*.exe
-
-# Log files
-warnings.log
+export/
